force-app/main/default/objects/Invoice_Data__c/Invoice_Data__c.object-meta.xml
<CustomObject>
    <description>BIZ-58338: Test object created to hold invoicing Data</description>
    <label>Invoice Data</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invoice_Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice_Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>