force-app/main/default/objects/Invoice_Data__c/fields/Billing_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Start_Date__c</fullName>
    <label>Billing Period Start Date</label>
    <type>Date</type>
</CustomField>