force-app/main/default/objects/Invoice_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Billing_Period_Start_Date__c</columns>
    <columns>Billing_Period_End_Date__c</columns>
    <columns>Billing_Amount__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>